# farmer_protest_llm

./: .gitignore  00_proposer.ipynb  01_classifier.ipynb  02_results.ipynb  03_spatiotemp_model.ipynb  LICENSE  README.md  fcn_bubble_chart.py  pyproject.toml
